@@ -49,6 +49,7 @@ static const GimpGetTypeFunc get_type_funcs[] =
   gimp_transfer_mode_get_type,
   gimp_transform_direction_get_type,
   gimp_transform_resize_get_type,
+  gimp_user_directory_get_type,
   gimp_vectors_stroke_type_get_type
 };
 
@@ -100,6 +101,7 @@ static const gchar * const type_names[] =
   "GimpTransferMode",
   "GimpTransformDirection",
   "GimpTransformResize",
+  "GimpUserDirectory",
   "GimpVectorsStrokeType"
 };
 
